Closed
Bug 1641141
Opened 5 years ago
Closed 5 years ago
error: no member named 'SetFollowLinks' in 'nsIFile'
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 78.0
People
(Reporter: Paenglab, Assigned: Paenglab)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
2.03 KB,
patch
|
mkmelin
:
review+
|
Details | Diff | Splinter Review |
This comes from bug 1466532.
| Assignee | ||
Updated•5 years ago
|
Keywords: regression
| Assignee | ||
Comment 1•5 years ago
|
||
Port of https://hg.mozilla.org/mozilla-central/rev/04fe21d06acd
I only removed the lines like on https://hg.mozilla.org/mozilla-central/rev/04fe21d06acd#l3.12
The build is successful but it crashes on startup. I don't know if this is because of this patch.
Assignee: nobody → richard.marti
Attachment #9151981 -
Flags: review?(mkmelin+mozilla)
Comment 2•5 years ago
|
||
Comment on attachment 9151981 [details] [diff] [review]
1641141-remove-SetFollowLinks.patch
Review of attachment 9151981 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks! r=mkmelin
::: mailnews/base/src/nsMsgFolderCompactor.cpp
@@ -327,5 @@
> NS_ENSURE_SUCCESS(rv, rv);
> m_file->InitWithFile(path);
> - // need to make sure the temp file goes in the same real directory
> - // as the original file, so resolve sym links.
> - m_file->SetFollowLinks(true);
Just removing these would be a concern, but I see "XP_UNIX ignores SetFollowLinks" so I guess this was just not doing anything useful in the first place!!
Attachment #9151981 -
Flags: review?(mkmelin+mozilla) → review+
| Assignee | ||
Comment 3•5 years ago
|
||
Also with the back-out of the m-c patch, and naturally my patch, does TB still crash.
| Assignee | ||
Updated•5 years ago
|
Keywords: checkin-needed-tb
Target Milestone: --- → Thunderbird 78.0
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/f9100b280c34
Port bug 1466532: Drop nsIFile::followLinks. r=mkmelin, a=me
Comment 5•5 years ago
|
||
I didn't yet build. Which platform are you crashing on?
| Assignee | ||
Comment 6•5 years ago
|
||
Windows. Also get the crash when building on m-c 4ff7fb7b9669. Looking further.
You need to log in
before you can comment on or make changes to this bug.
Description
•