Bug 1641141 - Port bug 1466532: Drop nsIFile::followLinks. r=mkmelin, a=me

--HG--
extra : amend_source : 89120a36d02858341d8b1c3f365aaa50d882ac8b